@@ -17,10 +17,6 @@ QAbout
 
 	- give good default size 
 
-QCommandBuffer
-
-	- fix !! I HATE Qt
- 
 QDocument
 
 	- implement me. Need MVC (Edwin is on this)
