@@ -1,5 +1,9 @@
 2002-09-12  John Levon  <levon@movementarian.org>
 
+	* QCommandBuffer.C: fix click
+ 
+2002-09-12  John Levon  <levon@movementarian.org>
+
 	* QMathDialog.C: work around Qt bug in previous change
  
 2002-09-12  John Levon  <levon@movementarian.org>
